--- a/HW2_notebook.ipynb
+++ b/HW2_notebook.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -324,16 +324,15 @@
       "  \u001b[38;5;1m-0.7071  \u001b[0m \u001b[38;5;1m 0.3536  \u001b[0m \u001b[38;5;1m 0.6124  \u001b[0m \u001b[38;5;4m 0.926   \u001b[0m  \u001b[0m\n",
       "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
       "\n",
-      "[array([ 0.95233016,  2.00315053,  2.05788725, -1.669711  , -2.68625661,\n",
-      "        1.64531109]), array([ 0.95221448, -0.50991982, -0.60764757,  0.36746106, -0.45499244,\n",
-      "       -1.49679256]), array([ 0.9523424 ,  1.23878619,  2.17860432,  2.11550893, -0.45518868,\n",
-      "       -1.49651099]), array([-1.46124055,  0.67979534,  1.91817545, -1.33955971,  2.26989219,\n",
-      "       -2.27868541]), array([-1.46126426, -0.18565367,  2.31066198,  2.27487666,  0.87168439,\n",
-      "        0.86306825]), array([-1.46126803, -1.32901011, -0.34749322,  2.93479486,  2.26990884,\n",
-      "       -2.27852242]), array([-1.46126901, -1.80198017, -0.73986592,  0.65854905,  0.87167867,\n",
-      "        0.86306549]), array([ 0.95251982,  0.13481064, -0.48790555,  2.7443548 , -2.68613962,\n",
-      "        1.64530059])]\n",
-      "[ 0.95240533  2.00320564  2.05841928 -1.67027781 -2.68631345  1.64526945]\n"
+      "[array([-1.46126567, -1.80197864, -0.73986867,  0.65854899,  0.87168357,\n",
+      "        0.86306595]), array([ 0.95232747,  1.23884337,  2.17869733,  2.11537475, -0.45519598,\n",
+      "       -1.49631652]), array([ 0.95247596, -0.50940439, -0.60790432,  0.36693054, -0.4554728 ,\n",
+      "       -1.49646761]), array([-1.46086234, -0.1848904 ,  2.30948548,  2.27553011,  0.87174141,\n",
+      "        0.8623025 ]), array([ 0.95251994,  2.00317227,  2.05844764, -1.67038478, -2.68606949,\n",
+      "        1.64524502]), array([ 0.952489  ,  0.134775  , -0.48784382,  2.74433428, -2.68616232,\n",
+      "        1.64529047]), array([-1.46123784, -1.32911563, -0.3473306 ,  2.93478751,  2.26990197,\n",
+      "       -2.27857907]), array([-1.46133241,  0.67959116,  1.91840119, -1.34027125,  2.2698245 ,\n",
+      "       -2.27802837])]\n"
      ]
     }
    ],
@@ -348,8 +347,7 @@
     "    if not any(np.allclose(q, s, atol=1) for s in sols):\n",
     "        sols.append(q)\n",
     "\n",
-    "print(sols)\n",
-    "print(q)"
+    "print(sols)"
    ]
   },
   {
